deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comfyui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comfyui
  template:
    metadata:
      labels:
        app: comfyui
    spec:
      containers:
      - name: comfyui-container
        
        image: obeliks/comfyui:sha-ebf5c41-cu121
        securityContext:
          runAsUser: 0  # 0 = root
        ports:
        - containerPort: 8188  # Port par défaut de ComfyUI
        resources:
          limits:
            nvidia.com/gpu: 1  # Demande une GPU
        volumeMounts:
        - name: models-volume
          mountPath: /app/custom_nodes
          subPath: custom_nodes_paths
        - name: models-volume
          mountPath: /app/models  # Chemin où ComfyUI stocke les modèles
          subPath: models_path
        - name: configs
          mountPath: /app/extra_model_paths.yaml
          subPath: extra_model_paths.yaml
      volumes:
      - name: models-volume
        persistentVolumeClaim:
          claimName: comfyui-models-pvc
          volumes:
      - name: configs
        configMap:
          name: vol-config-extra-models-paths
