ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comfyui-ingress
spec:
  rules:
  - host: comfyui-clem.lab.sspcloud.fr
    http:
      paths:
      - backend:
          service:
            name: comfyui-service
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls: 
  - hosts:
    - comfyui-clem.lab.sspcloud.fr
